--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miami</title>
+    <link
+      rel="shortcut icon"
+      type="image/svg"
+      href="./images/crown.svg"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
 
   </head>
@@ -36,7 +41,7 @@
           </li>
           <li class="nav__item">
             <a
-              href="#form"
+              href="#contacts"
               class="nav__link"
             >
               CONSULTATION
